# tuw_firmware_rccar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  requirements.txt  sdkconfig.defaults  sdkconfig.mros  sdkconfig.tracing
.devcontainer/: Dockerfile  devcontainer.json
config/: working_config_HIGH_CURRENT_AUTO_CALIBRATION_M0.json  working_config_HIGH_CURRENT_AUTO_CALIBRATION_M1.json
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/bno055/: BNO055ESP32.cpp  BNO055ESP32.h  bno_wrapper.cpp  bno_wrapper.h
main/can/: can_conf.h  can_dispatcher.c  can_dispatcher.h  can_driver.c  can_driver.h  can_interface.c  can_interface.h  can_rtr.c  can_rtr.h
main/imu/: imu.c  imu.h
main/kinematics/: kinematics.c  kinematics.h
main/mros/: mros.c  mros.h  mros_conf.h  mros_param.c  mros_param.h  mros_transport.c  mros_transport.h
main/odom/: odom.c  odom.h
main/odrive/: odrive.c  odrive.h  odrive_can.h  odrive_conf.h  odrive_enums.h  odrive_types.h
main/playground/misc/: basic.c  can-test-odrive.c  can-test-receiver.c  can-test-sender.c  execution_time_test.c  jtag_log_test.c  mros_param.c  mros_persistant_param.c  mros_test.c  servo_calibration.c
main/robot_controller/: robot_controller.c  robot_controller.h
main/servo/: servo.c  servo.h
main/utils/: gpio_utils.h  indicator_led.c  indicator_led.h  jtag_debug.c  jtag_debug.h  math_utils.c  math_utils.h  timing_utils.c  timing_utils.h
